<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2019 Davis Miyashiro
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Popular Movies</string>
    <string name="popular">Popular</string>
    <string name="rating">Highest Ratings</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_favorite_movies">Favorite Movies</string>
    <string name="action_settings">Settings</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="average_rating">Average rating: %1$s</string>
    <string name="mark_as_favorite">Mark as favorite:</string>
    <string name="synopsis_title">Synopsis:</string>
    <string name="trailers">Trailers:</string>
    <string name="play_trailer_desc">Play trailer</string>
    <string name="no_app_to_open_youtube">No app available to open YouTube</string>
    <string name="reviews">Reviews:</string>
    <string name="movie_added_msg">Movie added to Favorites</string>
    <string name="error_movie_added_msg">Error adding movie to Favorites</string>
    <string name="movie_deleted_msg">Movie deleted from Favorites</string>
    <string name="error_movie_deleted_msg">Error deleting movie from Favorites</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="highest_rated_movies">Highest Rated Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="please_check_your_network_status_or_try_again_later">Please check your network status or try again later.</string>
    <string name="no_movies_found">No movies found</string>
    <string name="backdrop_description">Screenshot of the movie</string>
    <string name="movie_poster_description">Movie Poster</string>
</resources>
